--- a/05-19-2024 Login Form Animated/index.html
+++ b/05-19-2024 Login Form Animated/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Login Form Animated || Lycheetea_Code</title>
     <link rel="stylesheet" href="style.css">
 </head>
