--- a/05-19-2024 Login Form Animated/index.html
+++ b/05-19-2024 Login Form Animated/index.html
@@ -21,7 +21,7 @@
                     <a href="#" class="icon"><i class="fa-brands fa-tiktok"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or user your email for registration</span>
+                <span>or use your email for registration</span>
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
@@ -38,7 +38,7 @@
                     <a href="#" class="icon"><i class="fa-brands fa-tiktok"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or user your email and password</span>
+                <span>or use your email and password</span>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
